# my-ambilight

./: cargo.toml
cmd-client/: Cargo.toml
cmd-client/src/: main.rs
udp-leds/: Cargo.toml
udp-leds/src/: client.rs  constants.rs  error.rs  lib.rs  server.rs
wifi-ambilight-server/: Cargo.toml
wifi-ambilight-server/.devcontainer/: devcontainer.json
wifi-ambilight-server/docs/: README.md
wifi-ambilight-server/scripts/: flash.sh  run-wokwi.sh
wifi-ambilight-server/src/: constants.rs  leds.rs  logging.rs  main.rs  wifi.rs
